--- a/index.html
+++ b/index.html
@@ -42,19 +42,39 @@
             <h2 class="description-title visually-hidden">Description</h2>
             <ul class="description-list">
                 <li class="description-list-item">
+                    <div class="icon-box">
+                        <svg class="provide-icon" height="64px" width="64px">
+                            <use href="./images/icons.svg#icon-antenna-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="description-title">Strategy</h3>
                     <p class="paragraph">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li class="description-list-item">
+                    <div class="icon-box">
+                        <svg class="provide-icon" height="64px" width="64px">
+                            <use href="./images/icons.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="description-title">Punctuality</h3>
                     <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="description-list-item">
+                    <div class="icon-box">
+                        <svg class="provide-icon" height="64px" width="64px">
+                            <use href="./images/icons.svg#icon-diagram-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="description-title">Diligence</h3>
                     <p class="paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="description-list-item">
+                    <div class="icon-box">
+                        <svg class="provide-icon" height="64px" width="64px">
+                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="description-title">Technologies</h3>
                     <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -74,6 +94,36 @@
                          <h3 class="team-part">Mark Guerrero</h3>
                          <p class="team-text">Product Designer</p>
                          </div>
+                            <ul class="team-social-list">
+                                <li class="team-social-item">
+                                    <a href="https://www.instagram.com/" class="team-social-links">
+                                        <svg class="social-svg" width="16px" height="16px">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="https://twitter.com/" class="team-social-links">
+                                        <svg class="social-svg" width="16px" height="16px">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="https://uk-ua.facebook.com/" class="team-social-links">
+                                        <svg class="social-svg" width="16px" height="16px">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="https://ua.linkedin.com/" class="team-social-links">
+                                        <svg class="social-svg" width="16px" height="16px">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                     </li>
                     <li class="team-list">
                         <img src="images/Card2.png" 
@@ -84,6 +134,36 @@
                         <h3 class="team-part">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
                         </div>
+                        <ul class="team-social-list">
+                            <li class="team-social-item">
+                                <a href="https://www.instagram.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://twitter.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://uk-ua.facebook.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://ua.linkedin.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-list">
                         <img src="images/Card3.png"
@@ -94,6 +174,36 @@
                         <h3 class="team-part">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
                         </div>
+                        <ul class="team-social-list">
+                            <li class="team-social-item">
+                                <a href="https://www.instagram.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://twitter.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://uk-ua.facebook.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://ua.linkedin.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-list">
                         <img src="images/Card4.png"
@@ -104,6 +214,36 @@
                         <h3 class="team-part">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
                         </div>
+                        <ul class="team-social-list">
+                            <li class="team-social-item">
+                                <a href="https://www.instagram.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://twitter.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://uk-ua.facebook.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-social-item">
+                                <a href="https://ua.linkedin.com/" class="team-social-links">
+                                    <svg class="social-svg" width="16px" height="16px">
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
                 </div>
