--- a/index.html
+++ b/index.html
@@ -316,6 +316,38 @@
         <a class="logo logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
         <p class="footer-item">Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.</p>
         </div>
+        <div class="footer-socials">
+            <p class="footer-socials-text">Social media</p>
+            <ul class="footer-social-list">
+                <li class="list-item">
+                    <a href="https://www.instagram.com/" class="footer-social-links">
+                        <svg class="footer-social-svg" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a href="https://twitter.com/" class="footer-social-links">
+                        <svg class="footer-social-svg" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a href="https://uk-ua.facebook.com/" class="footer-social-links">
+                        <svg class="footer-social-svg" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a href="https://ua.linkedin.com/" class="footer-social-links">
+                        <svg class="footer-social-svg" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
     </footer>
 </body>
 </html>
