--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="footer-socials">
             <p class="footer-socials-text">Social media</p>
             <ul class="footer-social-list">
-                <li class="list-item">
+                <li class="social-item">
                     <a href="https://www.instagram.com/" class="footer-social-links">
                         <svg class="footer-social-svg" width="24px" height="24px">
                             <use href="./images/icons.svg#icon-instagram-2"></use>
