--- a/index.html
+++ b/index.html
@@ -93,37 +93,37 @@
                          <div class="team-card-container">
                          <h3 class="team-part">Mark Guerrero</h3>
                          <p class="team-text">Product Designer</p>
-                         </div>
                             <ul class="team-social-list">
                                 <li class="team-social-item">
                                     <a href="https://www.instagram.com/" class="team-social-links">
-                                        <svg class="social-svg" width="16px" height="16px">
+                                        <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="https://twitter.com/" class="team-social-links">
-                                        <svg class="social-svg" width="16px" height="16px">
+                                        <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="https://uk-ua.facebook.com/" class="team-social-links">
-                                        <svg class="social-svg" width="16px" height="16px">
+                                        <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="https://ua.linkedin.com/" class="team-social-links">
-                                        <svg class="social-svg" width="16px" height="16px">
+                                        <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
+                         </div>
                     </li>
                     <li class="team-list">
                         <img src="images/Card2.png" 
@@ -133,37 +133,37 @@
                         <div class="team-card-container">
                         <h3 class="team-part">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
-                        </div>
                         <ul class="team-social-list">
                             <li class="team-social-item">
                                 <a href="https://www.instagram.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://twitter.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://uk-ua.facebook.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://ua.linkedin.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
+                        </div>
                     </li>
                     <li class="team-list">
                         <img src="images/Card3.png"
@@ -173,37 +173,37 @@
                         <div class="team-card-container">
                         <h3 class="team-part">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
-                        </div>
                         <ul class="team-social-list">
                             <li class="team-social-item">
                                 <a href="https://www.instagram.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://twitter.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://uk-ua.facebook.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://ua.linkedin.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
+                        </div>
                     </li>
                     <li class="team-list">
                         <img src="images/Card4.png"
@@ -213,32 +213,31 @@
                         <div class="team-card-container">
                         <h3 class="team-part">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
-                        </div>
                         <ul class="team-social-list">
                             <li class="team-social-item">
                                 <a href="https://www.instagram.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://twitter.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://uk-ua.facebook.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="https://ua.linkedin.com/" class="team-social-links">
-                                    <svg class="social-svg" width="16px" height="16px">
+                                    <svg class="social-svg" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
@@ -246,6 +245,7 @@
                         </ul>
                     </li>
                 </ul>
+            </div>
                 </div>
         </section>
         <section class="portfolio-section">
