--- a/index.html
+++ b/index.html
@@ -252,55 +252,102 @@
             <div class="container">
             <h2 class="portfolio">Our Portfolio</h2>
         <ul class="portfolio-list">
-                <li class="portfolio-list-item"><img src="./images/img1.jpg"
+                <li class="portfolio-list-item">
+                    <div class="img-hover">
+                    <img src="./images/img1.jpg"
                 alt="Banking App"
                 width="360"
                 height="300">
+                <p class="text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    Cloud Storage App
+                </p>
+                    </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Banking App</h3>
                         <p class="portfolio-projects-item">App</p>
                     </div>
                 </li>
-                <li class="portfolio-list-item"><img src="./images/img2.jpg"
+                <li class="portfolio-list-item">
+                    <div class="img-hover">
+                    <img src="./images/img2.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300">
+                <p class="text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App ·
+                    Cloud Storage App
+                </p>
+            </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Cashless Payment</h3>
                         <p class="portfolio-projects-item">Marketing</p>
                     </div>
                 </li>
-                <li class="portfolio-list-item"><img src="./images/img3.jpg"
+                <li class="portfolio-list-item">
+                    <div class="img-hover">
+                    <img src="./images/img3.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300">
+                <p class="text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App ·
+                    Cloud Storage App
+                </p>
+                    </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Meditation App</h3>
                         <p class="portfolio-projects-item">App</p>
                     </div>
                 </li>
-                <li class="portfolio-list-item"><img src="./images/img4.jpg"
+                <li class="portfolio-list-item">
+                    <div class="img-hover">
+                    <img src="./images/img4.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300">
+                <p class="text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App ·
+                    Cloud Storage App
+                </p>
+            </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Taxi Service</h3>
                         <p class="portfolio-projects-item">Marketing</p>
                     </div>
                 </li>
-                <li class="portfolio-list-item"><img src="./images/img5.jpg"
+                <li class="portfolio-list-item"></li>
+                    <div class="img-hover"></div>
+                    <img src="./images/img5.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300">
+                <p class="text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App ·
+                    Cloud Storage App
+                </p>
+            </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Screen Illustrations</h3>
                         <p class="portfolio-projects-item">Design</p>
                     </div>
                 </li>
-                <li class="portfolio-list-item"><img src="./images/img6.jpg"
+                <li class="portfolio-list-item">
+                    <div class="img-hover">
+                    <img src="./images/img6.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300">
+                <p class="text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App ·
+                    Cloud Storage App
+                </p>
+            </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Online Courses</h3>
                         <p class="portfolio-projects-item">Marketing</p>
