--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </div>
                 </li>
                 <li class="portfolio-list-item"></li>
-                    <div class="img-hover"></div>
+                    <div class="img-hover">
                     <img src="./images/img5.jpg"
                 alt="Screen Illustrations"
                 width="360"
@@ -330,7 +330,7 @@
                     App ·
                     Cloud Storage App
                 </p>
-            </div>
+                </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Screen Illustrations</h3>
                         <p class="portfolio-projects-item">Design</p>
@@ -347,7 +347,7 @@
                     App ·
                     Cloud Storage App
                 </p>
-            </div>
+                 </div>
                     <div class="portfolio-container">
                         <h3 class="portfolio-projects">Online Courses</h3>
                         <p class="portfolio-projects-item">Marketing</p>
