--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
         <a class="logo logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
         <p class="footer-item">Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.</p>
-        </div>
+
         <div class="footer-socials">
             <p class="footer-socials-text">Social media</p>
             <ul class="footer-social-list">
@@ -395,6 +395,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
         </div>
     </footer>
 </body>
