--- a/index.html
+++ b/index.html
@@ -360,9 +360,10 @@
 
     <footer class="footer">
         <div class="container footer-container">
-        <a class="logo logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-        <p class="footer-item">Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.</p>
-
+            <div class="footer-webstudio-box">
+                <a class="logo logo-link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                <p class="footer-item">Increase the flow of customers and<br> sales for your business with digital<br> marketing & growth solutions.</p>
+            </div>
         <div class="footer-socials">
             <p class="footer-socials-text">Social media</p>
             <ul class="footer-social-list">
