--- a/index.html
+++ b/index.html
@@ -369,28 +369,28 @@
             <ul class="footer-social-list">
                 <li class="social-item">
                     <a href="https://www.instagram.com/" class="footer-social-links">
-                        <svg class="footer-social-svg" width="24px" height="24px">
+                        <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item">
                     <a href="https://twitter.com/" class="footer-social-links">
-                        <svg class="footer-social-svg" width="24px" height="24px">
+                        <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item">
                     <a href="https://uk-ua.facebook.com/" class="footer-social-links">
-                        <svg class="footer-social-svg" width="24px" height="24px">
+                        <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item">
                     <a href="https://ua.linkedin.com/" class="footer-social-links">
-                        <svg class="footer-social-svg" width="24px" height="24px">
+                        <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
