--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         <p class="portfolio-projects-item">Marketing</p>
                     </div>
                 </li>
-                <li class="portfolio-list-item"></li>
+                <li class="portfolio-list-item">
                     <div class="img-hover">
                     <img src="./images/img5.jpg"
                 alt="Screen Illustrations"
